--- a/exercice4/style.css
+++ b/exercice4/style.css
@@ -3,6 +3,8 @@ margin: 0;
 font-family: Arial, sans-serif;
 background-color: #5c93b1;
 color: black;
+overflow-x: hidden;
+width: 100%;
 }
 
 header {
@@ -141,6 +143,7 @@ justify-content: center;
 display: flex;
 }
 
+
 @media screen and (max-width: 883px) {
 
 header {
@@ -184,8 +187,8 @@ margin-right: 10%;
 }
 
 .popup {
-width: 80vw;
-height: 80vh;
+    width: 50%;
+    height: 43%;
 }
 
 .popup .container {
@@ -200,4 +203,27 @@ font-size: 16px;
 #mobileMenuBtn .CloseButton{
 display: none;
 }
+
+
+}
+
+
+@media screen and (max-width: 600px) {
+    body{
+        background-color: red;
+    }
+    .popup {
+        width: 64vw;
+        height: 25vh;
+        position: absolute;
+    top: 50%;
+    }
+
+    .popup .container {
+        padding: 10px;
+    }
+
+    .close-btn {
+        margin-top: 5px;
+    }
 }
